--- a/crates/edit_prediction_context/Cargo.toml
+++ b/crates/edit_prediction_context/Cargo.toml
@@ -11,6 +11,10 @@ workspace = true
 [lib]
 path = "src/edit_prediction_context.rs"
 
+[[example]]
+name = "zeta_context"
+path = "examples/zeta_context.rs"
+
 [dependencies]
 anyhow.workspace = true
 arrayvec.workspace = true
@@ -19,17 +23,23 @@ gpui.workspace = true
 language.workspace = true
 log.workspace = true
 project.workspace = true
+regex.workspace = true
+serde.workspace = true
 slotmap.workspace = true
+strum.workspace = true
 text.workspace = true
 tree-sitter.workspace = true
 util.workspace = true
 workspace-hack.workspace = true
+itertools.workspace = true
 
 [dev-dependencies]
+clap.workspace = true
 futures.workspace = true
 gpui = { workspace = true, features = ["test-support"] }
 indoc.workspace = true
 language = { workspace = true, features = ["test-support"] }
+ordered-float.workspace = true
 pretty_assertions.workspace = true
 project = {workspace= true, features = ["test-support"]}
 serde_json.workspace = true
