--- a/Cargo.toml
+++ b/Cargo.toml
@@ -445,7 +445,8 @@ zlog_settings = { path = "crates/zlog_settings" }
 
 agent-client-protocol = { version = "0.4.2", features = ["unstable"] }
 aho-corasick = "1.1"
-alacritty_terminal = "0.25.1-rc1"
+# alacritty_terminal = "0.25.1-rc1"
+alacritty_terminal = { path = "../alacritty/alacritty_terminal" }
 any_vec = "0.14"
 anyhow = "1.0.86"
 arrayvec = { version = "0.7.4", features = ["serde"] }
