--- a/crates/svg_preview/Cargo.toml
+++ b/crates/svg_preview/Cargo.toml
@@ -14,8 +14,12 @@ path = "src/svg_preview.rs"
 [dependencies]
 editor.workspace = true
 file_icons.workspace = true
+futures.workspace = true
 gpui.workspace = true
-multi_buffer.workspace = true
+image.workspace = true
+language.workspace = true
+smallvec.workspace = true
+smol.workspace = true
 ui.workspace = true
 workspace.workspace = true
 workspace-hack.workspace = true
